# esp32_hackingtool

./: CMakeLists.txt  LICENSE  README.md  changelog.md  partitions.csv  sdkconfig
components/axp192/: CHANGELOG.md  Kconfig  axp192.c  axp192.h  axp192_config.h
components/axp202/: CMakeLists.txt  Kconfig  LICENSE.txt  README.md  axp202.c  axp202.h  axp202_config.h
components/esp_i2c_helper/: CMakeLists.txt  Kconfig  i2c_helper.c  i2c_helper.h
components/hagl_hal/: CMakeLists.txt  Kconfig  LICENSE  README.md
components/htool_api/: CMakeLists.txt  htool_api.c
components/htool_ble/: CMakeLists.txt  htool_ble.c
components/htool_display/: CMakeLists.txt  htool_display.c
components/htool_modbus/: CMakeLists.txt  htool_modbus.c
components/htool_netman/: CMakeLists.txt  htool_netman.c
components/htool_nvsm/: CMakeLists.txt  htool_nvsm.c
components/htool_pn532_spi/: CMakeLists.txt  htool_pn532_spi.c
components/htool_spi/: CMakeLists.txt  htool_spi.c
components/htool_wifi/: CMakeLists.txt  htool_wifi.c
components/htool_wifi/captive_portals/apple/: apple.html
components/htool_wifi/captive_portals/facebook/: facebook.html
components/htool_wifi/captive_portals/google/: google.html
components/htool_wifi/captive_portals/mcdonalds/: mcdonalds.html
components/htool_wifi/captive_portals/router/: 1_1.html  a1.html  asus.html  att.html  fritzbox.html  globe.html  huawei.html  magenta.html  netgear.html  o2.html  pldt.html  router.html  swisscom.html  tplink.html  verizon.html  vodafone.html
components/htool_wifi/include/: htool_wifi.h
main/: CMakeLists.txt  hackingtool.c
(+32 files in other folders)
